# mimuw-jnp2-rust.github.io

./: .eslintignore  .eslintrc.js  .eslintrc.yml  .gitignore  .prettierignore  .stylelintignore  .stylelintrc.json  Cargo.toml  README.md  atom.xml  book.css  book.js  check.sh  config.toml  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  robots.txt  run_checks.sh  search_index.en.js  sitemap.xml  zola_version
.github/workflows/: lint.yml  publish.yml
content/: _index.md
content/lessons/: _index.md  table_of_contents.md
content/lessons/00_organizational/: index.md
content/lessons/00_small_task_grading/: index.md
content/lessons/01_introduction/: functions.rs  hello_world.rs  index.md  loops.rs
content/lessons/01_introduction/a_taste_of_rust-introductory_slides/: A_taste_of_Rust.html  A_taste_of_Rust.md
content/lessons/01_introduction/students/: gasinska.py
content/lessons/02_ownership/: index.md
content/lessons/02_ownership/aliasing-xor-mutability/src/: main.rs
content/lessons/02_ownership/dont_panic/: dont_panic.html  dont_panic.md
content/lessons/02_ownership/string_formatting/: string_formatting.html  string_formatting.md
content/lessons/03_data_types/: data_types.rs  index.md  option.rs  tagged_union.cpp
content/lessons/03_data_types/module_system/: module_system.html  module_system.md
content/lessons/04_enums/: index.md  tagged_union.cpp
content/lessons/04_feedback_1/: index.md
content/lessons/05_tests/: index.md
content/lessons/05_types_reasoning/: basic_trait_display.rs  impl_trait.rs  index.md  lifetimes_basic.rs  trait_associated_type.rs  trait_generic_type.rs
content/lessons/06_closures_iterators/: closures_capturing.rs  closures_fun.rs  closures_syntax.rs  index.md  iterator_exhaustion.rs
content/lessons/06_types_reasoning/: basic_trait.rs  generics.rs  index.md  trait_default.rs
content/lessons/07_feedback/: index.md
content/lessons/07_smart_pointers/: index.md
content/lessons/08_feedback_2/: index.md
content/lessons/09_concurrency/: index.md
content/lessons/09_feedback2/: index.md
content/lessons/0_organizational/: index.md
content/lessons/10_design_patterns/: index.md
content/lessons/10_smart_pointers/: deref_coercion.rs  index.md
content/lessons/11_async_1/: index.md
content/lessons/11_feedback3/: index.md
content/lessons/12_concurrency/: index.md
content/lessons/12_project_feedback/: index.md
content/lessons/13_async_1/: index.md
content/lessons/13_async_2/: index.md
content/lessons/14_macros/: index.md
content/lessons/14_macros_1/: index.md
content/lessons/15_async_2/: index.md
content/lessons/15_macros_2/: index.md
content/lessons/15_unsafe/: index.md
content/lessons/16_unsafe/: index.md  unsafe_superpowers.rs
content/lessons/1_introduction/: demo.c  demo.cpp  hello-world.rs  hello_world.rs  index.md
content/lessons/2_ownership/: index.md
content/lessons/3_data_types/: data-types.rs  index.md
content/lessons/4_enums/: enums.rs  index.md  option.rs  pattern_matching.rs  result.rs
content/lessons/5_tests/: index.md
content/lessons/6_types_reasoning/: basic_trait.rs  generics.rs  index.md  lifetimes_basic.rs  lifetimes_elision.rs  non_generic.rs  static_dynamic_dispatch.rs  trait_default.rs
content/lessons/7_feedback/: constructor.rs  index.md  number_conversions.rs
content/lessons/8_closures_iterators/: index.md
content/lessons/9_feedback2/: index.md
content/lessons/B1_rusty_graphs/: index.md  petgraph_sample_dfs.rs
content/lessons/old/2021L/04_enums/: enums.c  (+2 more)
content/lessons/project_showcase/: index.md
lessons/: index.html
lessons/00-organizational/: index.html
lessons/01-introduction/: index.html
lessons/01-introduction/a_taste_of_rust-introductory_slides/: A_taste_of_Rust.html
lessons/01-introduction/students/: tudruj.cpp
lessons/02-ownership/: index.html
lessons/02-ownership/aliasing-xor-mutability/: Cargo.toml
lessons/02-ownership/dont_panic/: dont_panic.html
lessons/02-ownership/string_formatting/: string_formatting.html
lessons/03-data-types/: enums.c  index.html  option.rs  pattern_matching.rs  result.rs  variant.py
lessons/04-enums/: index.html
lessons/04-feedback-1/: index.html
lessons/05-tests/: index.html
lessons/05-types-reasoning/: basic_trait_display.rs  generics.rs  generics_fun.rs  impl_trait.rs  index.html  static_dynamic_dispatch.rs
lessons/06-closures-iterators/: closures_syntax.rs  index.html  iterator_exhaustion.rs
lessons/06-types-reasoning/: index.html
lessons/07-feedback/: index.html
lessons/07-smart-pointers/: index.html  ref_count.rs  weak_ref.rs
lessons/08-closures-iterators/: index.html
lessons/08-feedback-2/: index.html
lessons/09-concurrency/: index.html
lessons/09-feedback2/: index.html
lessons/10-design-patterns/: index.html
lessons/10-smart-pointers/: index.html
lessons/11-async-1/: index.html
lessons/11-feedback3/: index.html
lessons/12-concurrency/: index.html
lessons/12-project-feedback/: index.html
lessons/13-async-2/: index.html
lessons/13-design-patterns/: index.html
lessons/14-async-1/: index.html
lessons/14-macros/: index.html
lessons/14-macros-1/: index.html
lessons/15-async-2/: index.html
lessons/15-macros-2/: index.html
lessons/15-unsafe/: index.html
lessons/16-macros/: index.html
lessons/16-unsafe/: index.html
lessons/b1-rusty-graphs/: index.html
lessons/old/2021L/01-introduction/: errors_demo.c
lessons/old/2021L/04-enums/: option.rs
lessons/old/2021L/06-types-reasoning/: generics_fun.rs  non_generic.rs
lessons/old/2022Z/01-introduction/: errors_demo.cpp  variables.rs
lessons/old/2022Z/03-data-types/: pattern_matching.rs
lessons/old/2022Z/05-types-reasoning/: lifetimes_elision.rs  static_dynamic_dispatch.rs
lessons/project-showcase/: index.html
lessons/table-of-contents/: index.html
sass/: _code.scss  _content.scss  _header.scss  _navigation.scss  book.scss
static/: book.js
templates/: base.html  index.html  lesson.html  list.html
templates/shortcodes/: code_file.md  include_code_sample.md
(+25 files in other folders)
