[package]
name = "lessons"
version = "0.1.0"
edition = "2021"
authors = ["Andrzej Głuszak", "Piotr Wojtczak", "Wojciech Przytuła"]

[[bin]]
name = "01_errors_demo"
path = "content/lessons/01_introduction/errors_demo.rs"
[[bin]]
name = "01_hello_world"
path = "content/lessons/01_introduction/hello_world.rs"
[[bin]]
name = "01_conditionals"
path = "content/lessons/01_introduction/conditionals.rs"
[[bin]]
name = "01_functions"
path = "content/lessons/01_introduction/functions.rs"
[[bin]]
name = "01_loops"
path = "content/lessons/01_introduction/loops.rs"
[[bin]]
name = "01_variables"
path = "content/lessons/01_introduction/variables.rs"

[[bin]]
name = "03_data_types"
path = "content/lessons/03_data_types/data_types.rs"
[[bin]]
name = "03_enums"
path = "content/lessons/03_data_types/enums.rs"
[[bin]]
name = "03_option"
path = "content/lessons/03_data_types/option.rs"
[[bin]]
name = "03_pattern_matching"
path = "content/lessons/03_data_types/pattern_matching.rs"
[[bin]]
name = "03_result"
path = "content/lessons/03_data_types/result.rs"

[[bin]]
name = "05_basic_traits"
path = "content/lessons/05_types_reasoning/basic_trait.rs"
[[bin]]
name = "05_basic_trait_display"
path = "content/lessons/05_types_reasoning/basic_trait_display.rs"
[[bin]]
name = "05_trait_associated_types"
path = "content/lessons/05_types_reasoning/trait_associated_type.rs"
[[bin]]
name = "05_trait_generic_types"
path = "content/lessons/05_types_reasoning/trait_generic_type.rs"
[[bin]]
name = "05_impl_trait"
path = "content/lessons/05_types_reasoning/impl_trait.rs"
[[bin]]
name = "05_generic_largest"
path = "content/lessons/05_types_reasoning/generic_largest.rs"
[[bin]]
name = "05_generics"
path = "content/lessons/05_types_reasoning/generics.rs"
[[bin]]
name = "05_non_generic"
path = "content/lessons/05_types_reasoning/non_generic.rs"
[[bin]]
name = "05_trait_default"
path = "content/lessons/05_types_reasoning/trait_default.rs"
[[bin]]
name = "05_lifetimes_basic"
path = "content/lessons/05_types_reasoning/lifetimes_basic.rs"
[[bin]]
name = "05_lifetimes_elision"
path = "content/lessons/05_types_reasoning/lifetimes_elision.rs"
[[bin]]
name = "05_generic_fun"
path = "content/lessons/05_types_reasoning/generics_fun.rs"
[[bin]]
name = "05_static_dynamic_dispatch"
path = "content/lessons/05_types_reasoning/static_dynamic_dispatch.rs"

[[bin]]
name = "06_closures_syntax"
path = "content/lessons/06_closures_iterators/closures_syntax.rs"
[[bin]]
name = "06_closures_capturing"
path = "content/lessons/06_closures_iterators/closures_capturing.rs"
[[bin]]
name = "06_closures_fun"
path = "content/lessons/06_closures_iterators/closures_fun.rs"
[[bin]]
name = "06_iterator_exhaustion"
path = "content/lessons/06_closures_iterators/iterator_exhaustion.rs"

[[bin]]
name = "07_box"
path = "content/lessons/07_smart_pointers/box.rs"
[[bin]]
name = "07_deref_coercion"
path = "content/lessons/07_smart_pointers/deref_coercion.rs"
[[bin]]
name = "07_ref_count"
path = "content/lessons/07_smart_pointers/ref_count.rs"
[[bin]]
name = "07_weak_ref"
path = "content/lessons/07_smart_pointers/weak_ref.rs"

[dependencies]
rand = "0.8"
